--- a/pom.xml
+++ b/pom.xml
@@ -52,11 +52,14 @@
             <artifactId>ignite-indexing</artifactId>
             <version>${ignite.version}</version>
         </dependency>
-        <dependency>
-            <groupId>org.apache.ignite</groupId>
-            <artifactId>ignite-rest-http</artifactId>
-            <version>${ignite.version}</version>
-        </dependency>
+        <!-- debug用，agent代理 -->
+        <!--
+                <dependency>
+                    <groupId>org.apache.ignite</groupId>
+                    <artifactId>ignite-rest-http</artifactId>
+                    <version>${ignite.version}</version>
+                </dependency>
+        -->
 
     </dependencies>
 
